--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^5.1.0
   flutter_svg: ^2.0.7
   carousel_slider: ^4.2.1
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,7 @@ flutter:
   assets:
     - assets/AuthAssets/
     - assets/HomeAssets/
+    - assets/NavBarAssets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
