--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.5 <4.0.0'
+  sdk: '>=3.0.3 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,6 +41,10 @@ dependencies:
   flutter_svg: ^2.0.7
   carousel_slider: ^4.2.1
   photo_view: ^0.14.0
+  just_audio: ^0.9.34
+  audio_service: ^0.18.10
+  audio_video_progress_bar: ^1.0.1
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
