--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   audio_video_progress_bar: ^1.0.1
   cached_network_image: ^3.2.3
   persistent_bottom_nav_bar: ^5.0.2
+  subtitle: ^0.1.0-beta.3
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
