--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   persistent_bottom_nav_bar: ^5.0.2
   subtitle: ^0.1.0-beta.3
   http: ^1.1.0
+  rxdart:
+  marquee:
 
 dev_dependencies:
   flutter_test:
